Toevoegingen aan de homepage

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<header>
 		<div class="top">
-		<h2 class="title"><a href="index.html">HCI - Hend Elshaarawi</a></h2>
+			<h1 class="title"><a href="index.html">HCI - Hend Elshaarawi</a></h1>
 		</div>
 		<div class="navigation">
 			<nav>
@@ -33,8 +33,10 @@
 		<section class="intro">
 			<article class="introtext">
 				<h2>Welkom</h2>
-				<p>Mijn naam is Hend Elshaarawi en ik ben op het moment een tweedejaars student van de opleiding CMD. Sinds mei 2017 zijn er nieuwe technieken die gebruikt kunnen worden op het gebied van het maken een grid. Middels verschillende challenges laat ik zien hoe ik dit toepas. In challenge 1 laat ik de geschiedenis van responsive webdesign zien in een vorm van een tijdlijn. In challenge 2 wordt de huidige website van Resilient Webdesign herontworpen zodat alle gebruikers van verschillende devices hier een goede ervaring mee hebben. In het artikel van challenge 3 vertel ik wat over de toekomst van Artificial Intelligence. Verder zijn er twee andere pagina&apos;s: een excursiebeschrijviing en een reflectie. </p>
-				<p>Veel plezier!</p>
+				<p>Welkom om mijn portfolio! Mijn naam is Hend, ik ben 19 jaar en zit in de tweede klas van CMD. In dit laatste blok van het jaar doe ik mee aan de HCI weken. Hierbij krijgen wij over vier onderwerpen een hoorcollege en maken we de bijbehorende opdrachten. De onderwerpen die besproken worden zijn: extertion gaming, wearables, augmented en virtual reality en artificial creatures.</p> <br/>
+				<p>De laatste twee weken van dit vak volgen we in Zoetermeer waar de labweken zich plaatsvinden. In groepen van 4 tot 6 personen werken we aan een project waarbij we iets zelf opzetten en werkend maken. Het onderwerp dat centraal staat bij de labweken zal wearables zijn voor mij. </p><br/>
+				<p>Elke week bespreken we een nieuw onderwerp, ik verwacht dat ik meer inspiratie krijg voor toekomstige projecten die los staan van dit vak. Zonder dat we het doorhebben worden al veel technieken geïmplementeerd en hier zou ik meer alert op willen zijn. We krijgen meer inzicht in de technieken en hoe deze toegepast worden. Sommige projecten zijn gemaakt voor de lol en sommigen hebben een sociale functie: hoe meer we te zien krijgen, hoe beter.  <p><br/>
+
 			</article>
 
 			<article class="intropic">
@@ -42,12 +44,11 @@
 					<img src="img/cv/hend_elshaarawi.jpg">
 				</figure>
 			</article>
-		</section>		
+		</section>	
+
 	</div>
 
-	<footer>
-		<p>Made with &#9825; by Hend Elshaarawi</p>
-	</footer>
+	
 
 </body>
 </html>
