--- a/projectionmapping.html
+++ b/projectionmapping.html
@@ -36,10 +36,12 @@
 	   		<p>Voor deze opdracht moesten we middels Madmapper een 3D object projecteren op een ander object. Middels een beamer kon dit gedaan worden. Helaas is mijn video gewist, maar de kubus die ik gemaakt heb, is op de foto hiernaast te zien. Hiernaast zijn ook drie andere objecten in verschillende kleuren. Ik heb een twee cirkels, een traingel en twee soorten prisma's gemaakt. Ik heb met een klasgenootje samen een beamer gevraagd en aan zijn opdracht gewerkt. Hier heb ik wel een filmpje van:</p></div>
 			<br/>
 	   		<figure>
-	   		 	<img src="img/arvr/madmapper.png" alt="Drie 3D-figuren in het programma Madmapper."/>
-	   		 	<video width="320" height="240" controls >
+	   		 	<img class="extraa" src="img/arvr/madmapper.png" alt="Drie 3D-figuren in het programma Madmapper."/>
+	   		 	<figcaption>Werken in het programma Madmapper.</figcaption>
+	   		 	<video class="extra" width="320" height="240" controls >
 			 		<source src="img/arvr/mad.mov" type="video/mp4">
 				</video>
+				<figcaption>Een kubus projecteren op een object.</figcaption>
 	   		</figure>	
    		</section>
 
@@ -48,12 +50,16 @@
 	   		<p>In mijn virtuele wereld zijn er hoge ijsbergen te vinden. Het is allemaal wit en er staat een willekeurige auto geparkeerd. Voor de auto is er een grote witte blok die je kan wegduwen, je loopt er niet doorheen. Op het moment dat je dichterbij de auto komt, begint er een vlam te ontwikkelen boven de auto. Op het moment dat je achteruitloopt, blijft het vlammetje nog steeds aan. Na tien seconden valt het weer uit en kan de handeling opnieuw uitgevoerd worden.</p></div>
 			<br/>
 	   		<figure>
-	   		 	<img src="img/arvr/ground.png"/>
-	   		 	<img src="img/arvr/layer.png"/>
-	   		 	<img src="img/arvr/vlam.png">
-	   		 	<video width="320" height="240" controls >
+	   		 	<img class="extraa" src="img/arvr/ground.png"/>
+	   		 	<figcaption>Een ondergrond toevoegen.</figcaption>
+	   		 	<img class="extraa" src="img/arvr/layer.png"/>
+	   		 	<figcaption>Een layer toevoegen.</figcaption>
+	   		 	<img class="extraa" src="img/arvr/vlam.png">
+	   		 	<figcaption>Een code toevoegen om een vlam te creëren.</figcaption>
+	   		 	<video class="extra" width="320" height="240" controls >
 			 		<source src="img/arvr/xvid.mov" type="video/mp4">
 				</video>
+				<figcaption>Een korte preview van de vlam die aangaat wanneer je de auto benaderd.</figcaption>
 	   		</figure>	
    		</section>
 			
