Adding picture Fritzing

--- a/labweeks.html
+++ b/labweeks.html
@@ -184,6 +184,7 @@
 	   			</div>	
 
 	   			<figure>
+	   				<img src="img/hci/fritzing.png"/>
 	   			 	<video width="50%" controls >
 			  			<source src="img/hci/9.mov" type="video/mp4">
 					</video>
