Fout eruit halen wearbles

--- a/arduino.html
+++ b/arduino.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Arduino - opdrachten</title>
 	<link rel="stylesheet" type="text/css" href="css/twostep.css"/>
+	<link rel="shortcut icon" type="image/png" href="img/ac/flower.png"/>
 	<meta charset="utf-8"/>
 </head>
 <body>
