--- a/wearables.html
+++ b/wearables.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Wearables</title>
 	<link rel="stylesheet" type="text/css" href="css/onestep.css"/>
+	<link rel="shortcut icon" type="image/png" href="img/ac/flower.png"/>
 	<meta charset="utf-8"/>
 </head>
 <body>
@@ -38,14 +39,6 @@
 
 			<section class="pink">
 				<div class="intro"><h3>Opdracht 1 - Social interaction</h3><hr/>
-	   				<p>Social interaction lukt niet altijd. Het is ook niet altijd even makkelijk om te weten hoe iemand zich voelt of wat diegene nodig heeft. Voor moeders is het ideaal om op tijd te weten wanneer het pasgeboren kindje iets nodig heeft.</p>
-	   				<p>Door middel van een bandje kan gemeten worden wat er nodig is om de behoeften te vervullen. Kleine factoren hebben meestal al grote impact, bijvoorbeeld lichaamstemperatuur. Tijdens de winter worden kinderen vaak iets te goed ingepakt waardoor ze kunnen zweten en ziek worden. Het bandje kan op tijd meten wanneer er een temperatuurstijging (of daling) ontstaat en wanneer dit de verkeerde kant opgaat. Er worden verschillende dingen gemeten zoals hartslag, temperatuur etc. In de nacht kan een babyfoon filmen hoe het eraan toegaat met het kindje. Het kan fijner zijn om een notificatie/trilbericht te krijgen wanneer er iets fout dreigt te gaan. Het gaat puur om het op tijd inspelen zodat de nachtrust ook niet verstoord wordt. Als moeder/vader kun je op je eigen armband zien of het lichtje rood/oranje of groen licht aangeeft. Dit geeft de comfortstaat van het kind aan. Stel dat het oranje is, is er natuurlijk een kans dat hij hierna naar rood gaat. Je kan als ouder inspelen door te kijken wat er fout kan gaan. Door dit meteen aan te passen, kun je een ontevreden baby voorkomen en dat resulteert weer in minder stress. Voor het slapen kan dit handig zijn: je legt het kindje in bed, controleert na een kwartier of hij een fijne comfortlevel bereikt heeft en gaat uiteindelijk zelf slapen. Een goede nachtrust is natuurlijk belangrijk en helaas soms ook schaars, we doen er het liefst alles aan om dit voor beiden partijen goed te laten verlopen.</p>
-				</div>
-	   			<figure class="big">
-					<img src="img/wear/baby.jpeg"/>
-				</figure>
-
-   				<div class="intro"><h3>Opdracht 1 - Social interaction</h3><hr/>
 	   				<p>Social interaction lukt niet altijd. Het is ook niet altijd even makkelijk om te weten hoe iemand zich voelt of wat diegene nodig heeft. Voor moeders is het ideaal om op tijd te weten wanneer het pasgeboren kindje iets nodig heeft.</p>
 	   				<p>Door middel van een bandje kan gemeten worden wat er nodig is om de behoeften te vervullen. Kleine factoren hebben meestal al grote impact, bijvoorbeeld lichaamstemperatuur. Tijdens de winter worden kinderen vaak iets te goed ingepakt waardoor ze kunnen zweten en ziek worden. Het bandje kan op tijd meten wanneer er een temperatuurstijging (of daling) ontstaat en wanneer dit de verkeerde kant opgaat. Er worden verschillende dingen gemeten zoals hartslag, temperatuur etc. In de nacht kan een babyfoon filmen hoe het eraan toegaat met het kindje. Het kan fijner zijn om een notificatie/trilbericht te krijgen wanneer er iets fout dreigt te gaan. Het gaat puur om het op tijd inspelen zodat de nachtrust ook niet verstoord wordt. Als moeder/vader kun je op je eigen armband zien of het lichtje rood/oranje of groen licht aangeeft. Dit geeft de comfortstaat van het kind aan. Stel dat het oranje is, is er natuurlijk een kans dat hij hierna naar rood gaat. Je kan als ouder inspelen door te kijken wat er fout kan gaan. Door dit meteen aan te passen, kun je een ontevreden baby voorkomen en dat resulteert weer in minder stress. Voor het slapen kan dit handig zijn: je legt het kindje in bed, controleert na een kwartier of hij een fijne comfortlevel bereikt heeft en gaat uiteindelijk zelf slapen. Een goede nachtrust is natuurlijk belangrijk en helaas soms ook schaars, we doen er het liefst alles aan om dit voor beiden partijen goed te laten verlopen.</p>
 				</div>
