--- a/ar_vr.html
+++ b/ar_vr.html
@@ -3,6 +3,7 @@
 <head>
 	<title>AR &amp; VR</title>
 	<link rel="stylesheet" type="text/css" href="css/onestep.css"/>
+	<link rel="shortcut icon" type="image/png" href="img/ac/flower.png"/>
 	<meta charset="utf-8"/>
 </head>
 <body>
