--- a/computervision.html
+++ b/computervision.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Computer Vision</title>
 	<link rel="stylesheet" type="text/css" href="css/threestep.css"/>
+	<link rel="shortcut icon" type="image/png" href="img/ac/flower.png"/>
 	<meta charset="utf-8"/>
 </head>
 <body>
