--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link href="css/onestep.css" type="text/css" rel="stylesheet">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="shortcut icon" type="image/png" href="img/ac/flower.png"/>
 </head>
 <body>
 	<header>
